# svg-to-compose

./: .coderabbit.yaml  .coderabbit.yaml   .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.properties  build.gradle.kts  gradle.properties  requirements.txt  s2c  settings.gradle.kts
.ai/: guidelines.md
.ai/tools/mcp-vector-server/: README.md  install.sh  pyproject.toml
.ai/tools/mcp-vector-server/src/s2c_mcp_server/: __init__.py  server.py
.claude/: guidelines.md  mcp  settings.json  settings.local.json  tools
.githooks/: pre-commit.sh  pre-push.sh
.github/: copilot-instructions.md  dependabot.yml
.run/: Main [_svg-to-compose_jvm].run.xml  Main [playground_svg-to-compose_jvm].run.xml  gradle-plugin [tests].run.xml  svg-to-compose [allTests].run.xml  svg-to-compose [mac tests].run.xml
build-logic/: AGENTS.md  CLAUDE.md  build.gradle.kts  settings.gradle.kts
buildSrc/: AGENTS.md  CLAUDE.md  build.gradle.kts  settings.gradle.kts
config/: detekt.yml
docs/: ARCHITECTURE.md  MIGRATION.md  RELEASE.md  TEMPLATES.md  build.gradle.kts
gradle/: libs.cli.versions.toml  libs.playground-kmp.versions.toml  libs.playground.versions.toml  libs.versions.toml  libs.website.versions.toml
playground/: .gitignore  AGENTS.md  CLAUDE.md  build.gradle.kts  gradle.properties  s2c.template.toml  settings.gradle.kts
playground-kmp/: AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
s2c/: __init__.py  __main__.py  cli.py
sample-app/: .gitignore  (+3 more)
(+946 files in other folders)
