[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2c-mcp-vector-server"
version = "0.1.0"
description = "MCP server for SVG-to-Compose vector analysis, preview, and verification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.12.4,<2",
]

[project.scripts]
s2c-mcp-vector-server = "s2c_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
